--- a/n-eps-TQFT-nplus1/n-eps-TQFT-nplus1.tex
+++ b/n-eps-TQFT-nplus1/n-eps-TQFT-nplus1.tex
@@ -13,10 +13,13 @@
 
 \newcommand{\VV}{{\mathbf{V}}}
 \DeclareMathOperator{\Skein}{Skein}
-\newcommand{\opp}{{\text{op}}}
+\newcommand{\op}{{\text{op}}}
 
 \newcommand{\cB}{{\mathcal{B}}}
 \newcommand{\hatbox}{{\hat{\boxtimes}}}
+
+\DeclareMathOperator{\Vect}{Vec}
+\DeclareMathOperator{\Set}{Set}
 
 \begin{document}
 
@@ -433,6 +436,32 @@ then a 2-handle.
 %but this is 
 
 
+
+
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+Lawvere \cite{Lawvere} writes $\cA \bigotimes \cB$
+for $\cA \hatbox \cB$ (he consideres profunctors enriched over
+bicomplete symmetric monoidal closed category $\mathcal{V}$,
+here we just take $\mathcal{V} = \Vect$).
+
+Interesting example of profunctors
+
+\begin{example}
+A one-object $\Vect$-enriched category $*//A$
+is simply an algebra.
+Functors $F: *//A \to *//B$ are simply algebra homomorphisms,
+and natural transformations are simply central elements of $B$.
+
+On the other hand,
+a profunctor $F: *//A \nto *//B$
+is a functor $F: *//B^\op \times *//A \to \Vect$
+(since $(*//B)^\op = *//B^\op$)
+\end{example}
+
+
 \section{Skein theory for $(1+\veps)$-theory}
 
 To study completion of a $(n+\veps)$-theory
@@ -584,7 +613,7 @@ and morphism are given by
 
 It is straightforward to check that
 $Z(pt^+) \simeq \cA$
-and $Z(pt^-) \simeq \cA^\opp$
+and $Z(pt^-) \simeq \cA^\op$
 (in fact these are isomorphisms).
 
 \begin{definition}
@@ -657,6 +686,8 @@ for injectivity, see notes on excision
 \bibitem{SPries} Schommer-Pries, Christopher John. The classification of two-dimensional extended topological field theories. University of California, Berkeley, 2009.
 
 \bibitem{KT} Kirillov Jr, Alexander, and Ying Hong Tham. "Factorization homology and 4D TQFT." arXiv preprint arXiv:2002.08571 (2020).
+
+\bibitem{Lawvere} Lawvere, F. William. "Metric spaces, generalized logic, and closed categories." Rendiconti del seminario matématico e fisico di Milano 43 (1973): 135-166.
 
 \end{thebibliography}
 
